build/log/idf_py_stderr_output_8377
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'echo_task':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:52:16: error: comparison with string literal results in unspecified behavior [-Werror=address]
   52 |       if (buff == "IDLE") {
      |                ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:54:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   54 |       } else if (buff == "START") {
      |                       ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:56:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   56 |       } else if (buff == "RUN") {
      |                       ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:58:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   58 |       } else if (buff == "STOP") {
      |                       ^~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
